--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "graph",
-  "widgetName": "Graph",
+  "name": "treeTable",
+  "widgetName": "TreeTable",
   "version": "1.1.4",
-  "description": "My widget description",
+  "description": "Tree table with custom content",
   "packagePath": "mendixcn",
   "author": "wengao.liu@siemens.com",
   "dependencies": {
